# webassembly-language-runtimes

./: .dockerignore  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING_CLA.md  Dockerfile.wasi-builder  Dockerfile.wasm-base  Makefile  Makefile.builders  Makefile.helpers  README.md  wl-make.sh  wlr-make.sh
.github/workflows/: build-bundle-wasmlabs.yaml  build-lib.yaml  build-libjpeg.yaml  build-libjpegyaml  build-liboniguruma.yaml  build-libpng.yaml  build-libs-bundle_wlr.yaml  build-libs-bzip2.yaml  build-libs-libjpeg.yaml  build-libs-libpng.yaml  build-libs-libuuid.yaml  build-libs-libxml2.yaml  build-libs-oniguruma.yaml  build-libs-sqlite.yaml  build-libs-uuid.yaml  build-libs-zlib.yaml  build-libsqlite.yaml  build-libuuid.yaml  build-libxml2.yaml  build-libz.yaml  build-php-nightly.yaml  build-php-scheduled.yaml  build-php.yaml  build-python.yaml  build-ruby.yaml  build-uuid.yaml  build-zlib.yaml  release-bundle-wasmlabs.yaml  release-libjpeg.yaml  release-liboniguruma.yaml  release-libpng.yaml  release-libs-bundle_wlr.yaml  release-libs-bzip2.yaml  release-libs-libjpeg.yaml  release-libs-libpng.yaml  release-libs-libuuid.yaml  release-libs-libxml2.yaml  release-libs-oniguruma.yaml  release-libs-sqlite.yaml  release-libs-uuid.yaml  (+16 more)
docs/: developers.md
experiments/proxy-wasm/qjs/: Cargo.toml
experiments/proxy-wasm/qjs/bindings/: proxy-wasm.js
experiments/proxy-wasm/qjs/js-filter/: index.js  package-lock.json  package.json  translate.js
experiments/proxy-wasm/qjs/js-filter/lib/: filter.js
experiments/proxy-wasm/qjs/src/: lib.rs  quickjs.rs
experiments/se2-bindings/: README.md  run-e2e.sh
images/php/: Dockerfile.cli  Dockerfile.server
images/python/: Dockerfile
libs/: Makefile  README.md
libs-internal/wasmedge_sock/: netdb.c  wl-build.sh  wl-env-local.sh
libs/bundle-wasmlabs/: Makefile
libs/bundle_wlr/: Makefile  README.md  wl-build-deps.sh  wl-env-local.sh  wl-tag.sh  wlr-build-deps.sh  wlr-build.sh  wlr-env-local.sh  wlr-info.json
libs/bzip2/: Makefile  README.md
libs/examples/sqlite_example/: CMakeLists.txt  README.md  build.sh  main.c
libs/examples/uuid_zlib_example/: CMakeLists.txt  README.md  build.sh
libs/examples/zlib_cmake/: CMakeLists.txt  build.sh  main.c
libs/icu/: Makefile  README.md  wl-env-repo.sh
libs/libjpeg/: Makefile  README.md
libs/libpng/: Makefile  README.md
libs/libuuid/: Makefile  README.md
libs/libxml2/: Makefile  README.md  wl-env-repo.sh
libs/oniguruma/: Makefile  README.md
libs/sqlite/: Makefile  README.md  wl-env-repo.sh
libs/uuid/: Dockerfile  Makefile  wl-env-repo.sh
libs/wasmedge_sock/: .clang-format  CMakeLists.txt  Makefile  README.md  netdb.c  wasi_snapshot_preview1.h  wasi_socket_ext.c  wl-build.sh  wl-env-local.sh  wlr-build.sh  wlr-env-local.sh
libs/zlib/: Makefile  README.md  wl-env-repo.sh
php/: Dockerfile  Makefile  README.md  wl-env-repo.sh
php/master/: wl-build-deps.sh  wl-build.sh  wl-env-repo.sh  wlr-build-deps.sh  wlr-build.sh  wlr-info.json
php/php-7.3.33/: README.md  wasmlabs-README.md  wl-build.sh  wl-env-repo.sh  wl-tag.sh
php/php-7.4.32/: wasmlabs-README.md  wl-build-deps.sh  wl-build.sh  wl-env-repo.sh  wl-test.sh
php/php-8.1.11/: README.md  wl-build-deps.sh  wl-build.sh  wl-env-repo.sh  wl-test.sh  wlr-build-deps.sh  wlr-build.sh  wlr-env-repo.sh  wlr-info.json
php/php-8.2.0/: wl-build-deps.sh  wl-build.sh  wl-env-repo.sh  wl-test.sh  wlr-build-deps.sh  wlr-build.sh  wlr-env-repo.sh  wlr-info.json
php/php-8.2.0-slim/: patches  wl-build-deps.sh  wl-build.sh  wl-env-repo.sh  wl-tag.sh  wlr-build-deps.sh  wlr-build.sh  wlr-env-repo.sh  wlr-test.sh
php/php-8.2.6/: wlr-build.sh  wlr-env-repo.sh  wlr-info.json
php/proxy-wasm-bindings/: wl-env-repo.sh
php/v7.4.32/: README.md
php/v8.1.11/: wlr-build.sh  wlr-tag.sh
php/v8.2.0/: wlr-build.sh  wlr-info.json
php/v8.2.6/: wlr-build.sh  wlr-info.json  wlr-tag.sh  wlr-test.sh
python/: .dockerignore  Dockerfile  Makefile  README.md  wl-env-repo.sh
python/examples/: README.md  run_all_snippets.sh
python/examples/bindings/se2-bindings/wasm-wrapper-c/: CMakeLists.txt  build-wasm.sh  main.c  pyhost.c  pyhost.h  sdk_module.h  utils.c  utils.h  wasm_shim.c
python/examples/embedding/wasi-py-rs/: Cargo.toml  README.md  run_me.sh
python/examples/embedding/wasi-py-rs-cpython/: Cargo.toml  README.md  run_me.cmd  run_me.sh
python/examples/embedding/wasi-py-rs-cpython/src/: main.rs
python/examples/embedding/wasi-py-rs-pyo3/: Cargo.toml  README.md  run_me.cmd  run_me.sh
python/examples/embedding/wasi-py-rs/src/: lib.rs  py_module.rs
python/test/: run_me.sh
python/tools/wlr-libpython/: Cargo.toml  build.rs
python/v3.11.1/: wl-build-deps.sh  wl-build.sh  wl-env-repo.sh  wl-tag.sh  wlr-build-deps.sh  wlr-build.sh  wlr-env-repo.sh  wlr-info.json
python/v3.11.3/: wlr-build-deps.sh  wlr-build.sh  wlr-env-repo.sh  wlr-info.json  wlr-tag.sh
python/v3.11.4/: wlr-build.sh  wlr-env-repo.sh  wlr-info.json  wlr-tag.sh  wlr-test.sh
python/v3.12.0/: wlr-build.sh  wlr-env-repo.sh  wlr-info.json  wlr-tag.sh  wlr-test.sh
ruby/: Dockerfile  Makefile  README.md  wl-env-repo.sh
ruby/v3.2.0/: wlr-build.sh  wlr-tag.sh
ruby/v3.2.2/: wlr-env-repo.sh  wlr-tag.sh
ruby/v3_2_0/: wl-build.sh  wl-env-repo.sh  wlr-build.sh  wlr-env-repo.sh
ruby/v3_2_0-slim/: wl-build.sh  wl-env-repo.sh  wlr-build.sh  wlr-env-repo.sh
ruby/v3_2_2/: wlr-build.sh
scripts/: README.md  wl-build.sh  wl-env.sh  wl-hostbuild.sh  wl-setup-repo.sh  wl-tag.sh  wl-test.sh  wl-update-patches.sh  wlr-build.sh  wlr-env.sh  wlr-setup-repo.sh  wlr-tag.sh  wlr-test.sh  wlr-update-patches.sh
scripts/build-helpers/: README.md  patch_wasmedge_wat_sock_accept.sh  pkg_config_tools.sh  (+10 more)
(+204 files in other folders)
