[package]
name = "wlr-libpython"
version = "0.1.0"
edition = "2021"
links = "wlr-python"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libc = "0.2.62"

[lib]
crate-type = ["cdylib", "rlib"]

[build-dependencies]
flate2 = "1.0.26"
reqwest = { version = "0.11.18", features = ["blocking"] }
tar = "0.4.38"
bytes = "1.4.0"
path-absolutize = "3.0.14"