[package]
name = "wasi-py-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
# pyo3 = { path="../../../../../external/pyo3", version = "0.19.0", features = ["abi3-py311"] }
pyo3 = { version = "0.19.0", features = ["abi3-py311"] }
wlr-libpy = { git = "https://github.com/vmware-labs/webassembly-language-runtimes.git", features = ["py_main"] }
wlr-libpy-link = { path = "../../../tools/wlr-libpy-link"}

# [build-dependencies]
# wlr-libpy = { git = "https://github.com/vmware-labs/webassembly-language-runtimes.git", features = ["build"] }
